--- a/Microservices.WebApi/Gateway.WebApi/Properties/launchSettings.json
+++ b/Microservices.WebApi/Gateway.WebApi/Properties/launchSettings.json
@@ -8,7 +8,7 @@
       "sslPort": 44374
     }
   },
-  "profiles": {
+  /*"profiles": {
     "Gateway.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -18,7 +18,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
+    },*/
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
